# media-mate

./: .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY.md  SPEC.md  media-mate.toml.example  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  secret-scan.yml
docs/: architecture.md  tui-capture.txt
docs/archive/: SPEC_v0.2.2.md
examples/: WALKTHROUGH.md  run-demo.sh  sample-run.md
examples/test-dataset/output/: Demo-Project.drp.manifest.json
examples/test-dataset/raw/: A001_C002.mov  B001_C001.mov  B001_C002.mov
examples/test-dataset/raw/sub/: C001_C001.mov
scripts/: secret-scan.sh
src/media_mate/: __init__.py  cli.py  config.py  log.py  models.py  organize.py  probe.py  proxy.py  resolve.py  tui.py  verify.py
tests/: conftest.py  test_cli.py  test_config.py  test_log.py  test_models.py  test_organize.py  test_probe.py  test_proxy.py  test_resolve.py  test_tui.py  test_verify.py
