[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-mate"
version = "0.2.1"
description = "Zero-cost CLI for post-production media ops: probe, organize, generate proxies, build DaVinci Resolve projects, and verify backups."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "dspury", email = "demitriusspury@gmail.com" },
]
keywords = [
    "video",
    "media",
    "post-production",
    "ffmpeg",
    "davinci-resolve",
    "proxy",
    "checksum",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=0.50",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=4.0",
    "mypy>=1.0",
    "types-xxhash>=3.0",
]

[project.scripts]
media-mate = "media_mate.cli:main"

[project.urls]
Homepage = "https://github.com/dspury/media-mate"
Source = "https://github.com/dspury/media-mate"
Issues = "https://github.com/dspury/media-mate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/media_mate"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true